# meta-context-engineering

./: .env.template  .gitignore  LICENSE  README.md  pyproject.toml
env/: TUTORIAL.md  __init__.py  base.py  registry.py
env/symptom_diagnosis/: __init__.py  symptom_diagnosis_environment.py
env/symptom_diagnosis/data/: README.md
env/symptom_diagnosis_agent/: __init__.py  symptom_diagnosis_agent_environment.py
env/symptom_diagnosis_twostep/: __init__.py  data  symptom_diagnosis_twostep_environment.py
mce/: base_agent.py  eval.py  llm_client.py  logging_utils.py  main.py  meta_agent.py  utils.py  validation.py
mce/prompts/: base_agent.py  meta_agent.py
mce/workspace_utils/: __init__.py  embedding.py  llm.py
scripts/: train_symptom_diagnosis.sh  train_symptom_diagnosis_agent.sh  train_symptom_diagnosis_twostep.sh
